Adds Buiness Hierarchy

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Order It App</string>
+    <string name="launch_button_text">Scan Your Brininess's QR Code</string>
 </resources>
