--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Order It App</string>
+
+    <!-- Error Strings-->
+    <string name="input_error">File Input Error</string>
 </resources>
