--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Order It App</string>
 
+    <string name="welcome_activity_label">Welcome! Start Ordering</string>
+
     <!-- Error Strings-->
     <string name="input_error">File Input Error</string>
 </resources>
