--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <!-- Opening Page Main Activity Strings-->
     <string name="welcome_activity_label">Business Information</string>
+    <string name="start_scanning">Start Scanning</string>
 
     <!-- Welcome Strings: Welcome Activity Strings-->
     <string name="launch_ordering_label">Click here to start ordering!</string>
