Makes Layouts Dynamically in Checkout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,17 +19,19 @@
     <string name="search_by_label">Search By:</string>
 
     <!-- Checkout Activity -->
-    <string name="order_data">Order Data</string>
+    <string name="order_label">Your Order:</string>
     <string name="email_label">Send Order</string>
     <string name="settings_label">Input Settings</string>
     <string name="cancel_label">Cancel Order</string>
+    <string name="business_label">Business:</string>
+    <string name="customer_label">Customer Info:</string>
+    <string name="order_sent">Sending Order, pick up in 30 minutes</string>
 
     <!-- Preferences -->
     <string name="business_name_default">Java Cafe</string>
     <string name="settings_error">Input user settings!</string>
     <string name="checkout">Checkout</string>
     <string name="history">History</string>
-
 
     <!-- Error Strings-->
     <string name="layout_error">Sorry! This Business is not registered</string>
